--- a/TheWorld/wwwroot/index.html
+++ b/TheWorld/wwwroot/index.html
@@ -17,6 +17,9 @@
     </div>
     <div id="wrapper">
         <div id="main">
+            <div>
+                <button id="sidebarToggle">Toggle Menu</button>
+            </div>
             <h1>The World</h1>
             <p>This will be the fun website soon</p>
             <form>
